--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,15 +10,15 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  Tests:
     runs-on: ubuntu-latest
-
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run tests
+      run: cargo test --verbose
+  Clippy:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Run Clippy
       run: cargo clippy
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
