--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-"thiserror" = "1.0.30"
+thiserror = "1.0.30"
 pest = "2.1"
 pest_derive = "2.1"
+clap = { version = "3.1.18", features = ["derive"] }
 
 [lib]
 name = "sspds"
