--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ thiserror = "1.0.30"
 pest = "2.1"
 pest_derive = "2.1"
 clap = { version = "3.1.18", features = ["derive"] }
+serde = "1.0.137"
+serde_derive = "1.0.137"
+toml = "0.5.9"
 
 [lib]
 name = "sspds"
