proofs on how the left state looks like in the end

--- a/example-projects/yao/ssp.toml
+++ b/example-projects/yao/ssp.toml
@@ -18,15 +18,17 @@ rightmap = [["keys_top", "keys_top"], ["keys_bottom", "keys_bottom"],["simgate",
 left = "Left"
 right = "Right"
 invariant_path = "./invariant-GBLG.smt2"
-trees.GBLG = [ ["bot-table-right-alt-right-1", ["pre-right"]],
+trees.GBLG = [ ["bot-table-left-alt-left-1", []],
+               ["bot-Z-left-1", []],
+               ["bot-table-left-2-left-neu", []],
+               ["bot-j-abort",[]],
+               ["bot-except-left-neu-left-alt", []],
+               ["well-bot-left-NEU", []],
+               ["top-whole-left-neu-right-neu", []],
+               ["bot-table-right-alt-right-1", ["pre-right"]],
                ["well-bot-right-1",["pre-right"]],
-               ["well-bot-right-NEU",["pre-right"]],  
-               ["top-whole-left-neu-right-neu",  []],
-               ["bot-table-left-alt-left-1",  []],
-               ["well-bot-left-NEU",[]],         
-               ["lemma2-right-keys-a", ["pre-right"]],
-               ["lemma2-left-keys-a", []],
-               ["lemma2-left-keys-2", []],
+               ["well-bot-right-NEU",["pre-right"]],
+               ["bot-except-right-neu-right-alt", ["pre-right"]],
                ["lemma2-keys-2", ["lemma2-keys-1"]],
                ["lemma2-keys-3", ["lemma2-keys-1","lemma2-keys-2"]],
                ["lemma2-right-keys-b", ["no-abort","lemma1-keys","lemma2-right-keys-a"]],
