It worksgit pull!

--- a/example-projects/yao/ssp.toml
+++ b/example-projects/yao/ssp.toml
@@ -18,13 +18,17 @@ rightmap = [["keys_top", "keys_top"], ["keys_bottom", "keys_bottom"],["simgate",
 left = "Left"
 right = "Right"
 invariant_path = "./invariant-GBLG.smt2"
-trees.GBLG = [ ["right-top-abort", []],
-               ["right-bot-abort", []],
-               ["right-all-aborts", []],
+trees.GBLG = [ ["right-all-aborts", []],
                ["right-all-aborts-inverse", []],
                ["left-all-aborts", []],
                ["left-inverse-all-aborts", []],
-               ["bot-Z-left-1", []],
+               ["aborts-right-left", ["left-all-aborts","left-inverse-all-aborts","right-all-aborts","right-all-aborts-inverse"]],
+               ["aborts-left-right", ["left-all-aborts","left-inverse-all-aborts","right-all-aborts","right-all-aborts-inverse"]],
+               ["aborts-equal", ["aborts-right-left","aborts-left-right"]],
+               ["top-whole-left-neu-right-neu", ["no-abort","left-inverse-all-aborts","right-all-aborts-inverse",]],
+               ["bot-except-left-neu-left-alt",["no-abort","left-all-aborts","left-inverse-all-aborts"]],
+               ["bot-table-left-2-left-neu",["no-abort","left-all-aborts","left-inverse-all-aborts"]], 
+               ["bot-Z-left-2",["no-abort","left-all-aborts","left-inverse-all-aborts"]],
                ["bot-table-left-2-left-neu", []],
                ["bot-except-left-neu-left-alt", []],
                ["well-bot-left-NEU", []],
