can prove what I want to prove now

--- a/example-projects/yao/ssp.toml
+++ b/example-projects/yao/ssp.toml
@@ -22,25 +22,11 @@ trees.GBLG = [ ["right-all-aborts", []],
                ["right-all-aborts-inverse", []],
                ["left-all-aborts", []],
                ["left-inverse-all-aborts", []],
-               ["aborts-right-left", ["left-all-aborts","left-inverse-all-aborts","right-all-aborts","right-all-aborts-inverse"]],
-               ["aborts-left-right", ["left-all-aborts","left-inverse-all-aborts","right-all-aborts","right-all-aborts-inverse"]],
-               ["aborts-equal", ["aborts-right-left","aborts-left-right"]],
+               ["aborts-equal", ["left-all-aborts","left-inverse-all-aborts","right-all-aborts","right-all-aborts-inverse"]],
                ["top-whole-left-neu-right-neu", ["no-abort","left-inverse-all-aborts","right-all-aborts-inverse",]],
-               ["bot-except-left-neu-left-alt",["no-abort","left-all-aborts","left-inverse-all-aborts"]],
-               ["bot-table-left-2-left-neu",["no-abort","left-all-aborts","left-inverse-all-aborts"]], 
-               ["bot-Z-left-2",["no-abort","left-all-aborts","left-inverse-all-aborts"]],
-               ["bot-table-left-2-left-neu", []],
-               ["bot-except-left-neu-left-alt", []],
-               ["well-bot-left-NEU", []],
-               ["top-whole-left-neu-right-neu", []],
-               ["bot-table-right-alt-right-1", ["pre-right"]],
-               ["well-bot-right-1",["pre-right"]],
-               ["well-bot-right-NEU",["pre-right"]],
-               ["bot-except-right-neu-right-alt", ["pre-right"]],
-               ["lemma2-keys-2", ["lemma2-keys-1"]],
-               ["lemma2-keys-3", ["lemma2-keys-1","lemma2-keys-2"]],
-               ["lemma2-right-keys-b", ["no-abort","lemma1-keys","lemma2-right-keys-a"]],
-               ["lemma2-left-keys-b", ["no-abort","lemma1-keys","lemma2-left-keys-a"]],
-               ["lemma2-keys", ["no-abort","lemma2-left-keys-b","lemma2-right-keys-b"]],
-               ["same-output", ["no-abort","lemma1-keys","lemma2-keys"]]
+               ["bot-left-neu",["no-abort","left-all-aborts","left-inverse-all-aborts"]],
+               ["bot-right-neu",["no-abort","right-all-aborts","right-all-aborts-inverse"]],
+               ["temp",["no-abort","left-all-aborts","left-inverse-all-aborts","right-all-aborts","right-all-aborts-inverse","bot-left-neu","bot-right-neu"]],
+               ["same-output", ["temp","no-abort","left-all-aborts","left-inverse-all-aborts","right-all-aborts","right-all-aborts-inverse","bot-left-neu","bot-right-neu"]],
+               ["invariant-GBLG-post", ["temp","no-abort","left-all-aborts","left-inverse-all-aborts","right-all-aborts","right-all-aborts-inverse","bot-left-neu","bot-right-neu"]]
              ]
