reverting my changes from last week to make tool run again for now

--- a/example-projects/yao/ssp.toml
+++ b/example-projects/yao/ssp.toml
@@ -1,16 +1,16 @@
 [assumptions]
-[assumptions.Indcpa]
-left = "Indcpa0"
-right = "Indcpa1"
+[assumptions.LeftRight]
+left = "Left"
+right = "Right"
 
 [[game_hops]]
 [game_hops.Reduction]
 
-left = "VeryLeft"
-right = "Left"
-assumption = "Indcpa"
-leftmap = [["keys_top", "keys_top"], ["enc", "enc"]]
-rightmap = [["keys_top", "keys_top"], ["enc", "enc"]]
+left = "Left"
+right = "Right"
+assumption = "LeftRight"
+leftmap = [["keys_top", "keys_top"], ["keys_bottom", "keys_bottom"],["gate","gate"], ["enc", "enc"]]
+rightmap = [["keys_top", "keys_top"], ["keys_bottom", "keys_bottom"],["simgate", "simgate"],["ev", "ev"]]
 
 [[game_hops]]
 [game_hops.Equivalence]
@@ -18,6 +18,8 @@ rightmap = [["keys_top", "keys_top"], ["enc", "enc"]]
 left = "Left"
 right = "Right"
 invariant_path = "./invariant-GBLG.smt2"
+trees.SETBIT = [ ["invariant-SETBIT-post", []]
+             ]
 trees.GBLG = [ ["right-all-aborts", []],
                ["right-all-aborts-inverse", []],
                ["left-all-aborts", []],
