--- a/example-projects/yao/ssp.toml
+++ b/example-projects/yao/ssp.toml
@@ -15,6 +15,17 @@ rightmap = [["keys_top", "keys_top"], ["keys_bottom", "keys_bottom"],["simgate",
 
 [[game_hops]]
 [game_hops.Equivalence]
+left  = Indcpamod0
+right = Indcpamon0
+invariant_path = "./invariant-Indcpa0.smt2"
+trees.SETBIT = [ ["invariant-SETBIT-post", []],
+                  ["aborts-equal-SETBIT", []],
+                  ["same-output-SETBIT", ["no-abort-SETBIT"]]
+                ]
+
+
+
+[game_hops.Equivalence]
 
 left = "Left"
 right = "Right"
