--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sspds"
+name = "sspverif"
 version = "0.1.0"
 authors = ["Jan Winkelmann (keks) <git@keks.cool>", "Christoph Egger <christoph.egger@alumni.fau.de>"]
 edition = "2018"
