--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,19 @@
+[workspace]
+members = [".", "crates/smtlib"]
+
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+
+[workspace.dependencies]
+sspverif-smtlib = { path = "crates/smtlib" }
+
 [package]
 name = "sspverif"
 version = "0.1.0"
 authors = [
-  "Jan Winkelmann (keks) <git@keks.cool>",
-  "Christoph Egger <christoph.egger@alumni.fau.de>",
+    "Jan Winkelmann (keks) <git@keks.cool>",
+    "Christoph Egger <christoph.egger@alumni.fau.de>",
 ]
 edition = "2021"
 
@@ -19,13 +29,13 @@ pest_derive = "2.1"
 clap = { version = "4.0", features = ["derive"] }
 serde = "1.0.137"
 serde_derive = "1.0.137"
-toml = "0.5.9"
 subprocess = "0.2"
-toml_edit = { version = "0.14.4", features = ["easy"] }
-expectrl = "0.5.2"
 itertools = "0.10"
+expectrl = "0.5.2"
 miette = { version = "7.2.0", features = ["fancy"] }
 tempfile = "3"
+
+sspverif-smtlib = { workspace = true }
 
 [lib]
 name = "sspverif"
