--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,5 +36,5 @@ itertools = "0.10"
 expectrl = "0.5.2"
 miette = { version = "7.2.0", features = ["fancy"] }
 tempfile = "3"
-
 sspverif-smtlib = { workspace = true }
+log = "0.4.22"
