Walk subdirectories when loading project files
This change recursively walk subdirectories when loading project files. Feature was motivated by the TLS 1.3 key schedule security project in which we have automated generation of packages based on some templates and to nicely organize packages, we want autogenerated ones to be in their own subdirectory.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,4 @@ miette = { version = "7.2.0", features = ["fancy"] }
 tempfile = "3"
 sspverif-smtlib = { workspace = true }
 log = "0.4.22"
+walkdir = "2"
