New UI and parallelism (#114)
* make Reduction impl Send while keeping Spans around

* Add UI Module

* Sort Cargo.toml

* Display for GameHop

* Implement parallel solving

* basic handling of errors

* add oracle name to ClaimProofFailed error message

* make reductions one-step progress

* fine-tuning

* Properly project error out of parallel solver

* fix per-oracle smt transcript files

* Fix tests

* Convert ProofUI into a trait for easier testing

* remove steady ticks, fix a few ui glitches

* adapt logging to indicatif

* keep some information available after ssbee finished

* move indicatif UI to its own mod

* cleanup

* properly handle new in mock

---------

Co-authored-by: Jan Winkelmann (keks) <jan@cryspen.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,17 +25,24 @@ debug = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0.61"
+clap = { version = "4.0", features = ["derive"] }
+env_logger = "0.11"
+expectrl = "0.5.2"
+indicatif = "0.18"
+indicatif-log-bridge = "0.2"
+itertools = "0.10"
+log = "0.4.22 "
+miette = { version = "7.2.0", features = ["fancy"] }
 pest = { version = "2.7", features = ["miette-error"] }
 pest_derive = "2.7"
-clap = { version = "4.0", features = ["derive"] }
+rayon = "1.10"
 serde = "1.0.137"
 serde_derive = "1.0.137"
-subprocess = "0.2"
-itertools = "0.10"
-expectrl = "0.5.2"
-miette = { version = "7.2.0", features = ["fancy"] }
-tempfile = "3"
 sspverif-smtlib = { workspace = true }
-log = "0.4.22"
+subprocess = "0.2"
+tempfile = "3"
+thiserror = "1.0.61"
 walkdir = "2"
+
+[dev-dependencies]
+mockall = "0.13"
