--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,7 @@ sspverif = { path = "" }
 [package]
 name = "sspverif"
 version = "0.1.0"
-authors = [
-    "Jan Winkelmann (keks) <git@keks.cool>",
-    "Christoph Egger <christoph.egger@alumni.fau.de>",
-    "Chris Brzuska <chris.brzuska@aalto.fi>",
-]
+authors = ["The SSBee Team"]
 edition = "2021"
 
 [profile.release]
