move readme, update it a bit (#151)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [".", "crates/smtlib", "crates/ssbee"]
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
+readme = "Readme.md"
 
 [workspace.dependencies]
 sspverif-smtlib = { path = "crates/smtlib" }
@@ -14,6 +15,9 @@ name = "sspverif"
 version = "0.1.0"
 authors = ["The SSBee Team"]
 edition = "2021"
+
+# We are no ready to publish yet.
+publish = false
 
 [profile.release]
 debug = true
